Step4 - Add Javadoc comment and clean code